Version ?.?.? (????/??/??)
==========================

 New features:
 -------------
  * New cartridge types supported:
    - 71: Super Cart 64 KB 5200 cartridge (32K banks)
    - 72: Super Cart 128 KB 5200 cartridge (32K banks)
    - 73: Super Cart 256 KB 5200 cartridge (32K banks)
    - 74: Super Cart 512 KB 5200 cartridge (32K banks)
    See DOC/cart.txt for details.


Version 4.2.0 (2019/12/28) - released at SILK
==========================

 New Features:
 -------------
  * raw Pokey registers recording by Ivo van Poorten
  * new platform supported: FireBee
  * optional hiding of hidden files/folders in the UI file selector
  * libatari800 (Atari800 as a library) by Rob McMullen
  * R: device (many years old feature) enabled by default
 
 Fixes:
 ------
  * proper check if SDL joysticks are found (fixes #58)
  * Portrait mode for Android (related to #41)
  * RMW for Pokey
  * ROM OS path changes handled better
  * improved "Find ROM images" - now Atari800 reboots if necessary
  * fixed an old bug which caused freezing in the UI on Falcon

 New command line options:
 -------------------------
  * -pokeyrec and its children
  * -atari_files
  * -saved_files
  * -kbdjoy0 -kbdjoy1 -nokbdjoy0 -nokbdjoy1

 Plus many Atari Falcon specific fixes and improvements by Mikro.


Version 4.1.0 (2019/04/13) - release cooked at Atariada.cz (again :-)
==========================

 New Features:
 -------------
  * Atari800 now includes Altirra BIOS-es for all emulated systems: 400/800,
    XL/XE, and 5200; as well as Altirra BASIC. It is now possible to use the
    emulator without providing any ROM images.

  * The Altirra OS-es and Altirra BASIC can now be selected by users in the
    "System settings", if they want to use them. Previously Altirra OS was used
    automatically only when no other OS ROMs were found.

  * joyhat support for all four real joysticks, configurable in CLI/cfg/TUI


 Notable changes:
 ----------------