@@ -263,7 +263,7 @@ Turn on Atari BASIC ROM
 .BI \-cart\  filename
 Insert cartridge (CART or raw format)
 .TP
-.BR "\-cart\-type 0" .. 74
+.BR "\-cart\-type 0" .. 75
 Select type of the cartridge inserted with the \fB\-cart\fR option.
 When inserting a raw ROM image its type cannot be detected automaticcaly,
 and must be provided with this option.
@@ -396,7 +396,7 @@ Blizzard 16 KB cartridge
 Atarimax 128 KB Flash cartridge
 .TP
 .B 42
-Atarimax 1 MB Flash cartridge
+Atarimax 1 MB Flash cartridge (old)
 .TP
 .B 43
 SpartaDos X 128 KB cartridge
@@ -493,6 +493,9 @@ Super Cart 256 KB 5200 cartridge (32K banks)
 .TP
 .B 74
 Super Cart 512 KB 5200 cartridge (32K banks)
+.TP
+.B 75
+Atarimax 1 MB Flash cartridge (new)
 .PD
 .RE
 If this option is not given, the user will be asked to choose the cartridge
@@ -503,7 +506,7 @@ Insert piggyback cartridge (CART or raw format).
 This works only if the first cartridge is a pass-through (currently only
 SpartaDOS X 64KB and 128KB types).
 .TP
-.BR "\-cart2\-type 0" .. 74
+.BR "\-cart2\-type 0" .. 75
 Select type of the cartridge inserted with the \fB-cart2\fR option.
 When inserting a raw ROM image its type cannot be detected automatically,
 and must be provided with this option.
