@@ -82,7 +82,7 @@ enum {
 	CARTRIDGE_PHOENIX_8      = 39,
 	CARTRIDGE_BLIZZARD_16    = 40,
 	CARTRIDGE_ATMAX_128      = 41,
-	CARTRIDGE_ATMAX_1024     = 42,
+	CARTRIDGE_ATMAX_OLD_1024 = 42,
 	CARTRIDGE_SDX_128        = 43,
 	CARTRIDGE_OSS_8          = 44,
 	CARTRIDGE_OSS_043M_16    = 45,
@@ -115,7 +115,8 @@ enum {
 	CARTRIDGE_5200_SUPER_128 = 72,
 	CARTRIDGE_5200_SUPER_256 = 73,
 	CARTRIDGE_5200_SUPER_512 = 74,
-	CARTRIDGE_TYPE_COUNT     = 75
+	CARTRIDGE_ATMAX_NEW_1024 = 75,
+	CARTRIDGE_TYPE_COUNT     = 76
 };
 
 extern cart_t const CARTRIDGES[CARTRIDGE_TYPE_COUNT];
