@@ -8,6 +8,7 @@ Version ?.?.? (????/??/??)
     - 72: Super Cart 128 KB 5200 cartridge (32K banks)
     - 73: Super Cart 256 KB 5200 cartridge (32K banks)
     - 74: Super Cart 512 KB 5200 cartridge (32K banks)
+    - 75: Atarimax 1 MB Flash cartridge (new)
     See DOC/cart.txt for details.
 
 
